--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
 td, th {
 	font-family: Arial;
 	font-size: 15px;
-	padding: 10px; :10px; :10px; :10px;
+	padding: 10px 10px 10px 10px;
 	border: 1px solid;
 	text-align: center;	
 	clear: both;
@@ -21,7 +21,6 @@ td, th {
 	font-family: Arial;
 	font-size: 15px;
 	font-style: italic;
-	font-weight: Regular;
 	color:#e6e8e6;
 	text-align: center;
 	border: 1px solid;	
@@ -40,7 +39,7 @@ h1{
 	font-family: Arial;
 	font-weight: bold;
 	font-size: 33px;
-	margin: top: 10px; bottom: 10px;
+	margin: bottom: 10px;
 	text-align: center;	
 }
 
