--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ h1{
 	font-family: Arial;
 	font-weight: bold;
 	font-size: 33px;
-	margin: bottom: 10px;
+	margin: 10px;
 	text-align: center;	
 }
 
